--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
   <string name="saved_recipes_fragment">saved recipes Fragment</string>
   <string name="nutritional_value">favorites Nutritional Value</string>
   <string name="randomize_fragment">Randomize Fragment</string>
+  <string-array name="numbers">
+    <item>Ground Beef</item>
+    <item>Chicken Breast</item>
+    <item>Salmon</item>
+    <item>Turkey</item>
+    <item>Pork</item>
+  </string-array>
 </resources>
