--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
   <string name="saved_recipes_fragment">saved recipes Fragment</string>
   <string name="nutritional_value">favorites Nutritional Value</string>
   <string name="randomize_fragment">Randomize Fragment</string>
+  <string name="choose_meat">Choose Meat</string>
+  <string name="choose_vegetable">Choose Vegetable</string>
+  <string name="randomize">Randomize!</string>
   <string-array name="numbers">
     <item>Ground Beef</item>
     <item>Chicken Breast</item>
