Changed up some styling and got somethings the way I wanted them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
   <string name="title_randomize">Randomize!</string>
   <string name="saved_recipes_fragment">saved recipes Fragment</string>
   <string name="nutritional_value">Nutritional Values Fragment</string>
-  <string name="randomize_fragment">Randomize Fragment</string>
+  <string name="randomize_fragment">Choose Your Selections</string>
   <string name="choose_meat">Choose Meat</string>
   <string name="choose_vegetable">Choose Vegetable</string>
   <string name="randomize">Randomize!</string>
