--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,14 @@
   <string name="title_randomize">Randomize!</string>
   <string name="saved_recipes_fragment">saved recipes Fragment</string>
   <string name="nutritional_value">Nutritional Values Fragment</string>
-  <string name="randomize_fragment">Choose Your Selections</string>
+  <string name="randomize_fragment">Enter a Main Ingredient you would like to find a randomized recipe for</string>
   <string name="choose_meat">Choose Meat</string>
   <string name="choose_vegetable">Choose Vegetable</string>
   <string name="randomize">Randomize!</string>
   <string name="popup_Results_fragment">Results fragment popup</string>
+  <string name="please_enter_main_ingredient">Please enter Ingredient</string>
+  <string name="volley_error_message">That didn\'t work!</string>
+  <string name="on_response">Response is:</string>
 
   <string-array name="meat_selection">
     <item>Ground Beef</item>
@@ -30,4 +33,5 @@
     <item>spinach</item>
   </string-array>
 
+  <string name="base_url">http://api.yummly.com/v1/</string>
 </resources>
