--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
   </string-array>
 
   <string name="base_url">http://api.yummly.com/v1/</string>
+  <string name="returned_recipe_rng">DEFAULT</string>
 </resources>
