I added a text view and a button to save my result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
 
   <string name="base_url">http://api.yummly.com/v1/</string>
   <string name="returned_recipe_rng">DEFAULT</string>
+  <string name="save_recipe">Save Recipe</string>
 </resources>
