--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
   <string name="base_url">http://api.yummly.com/v1/</string>
   <string name="returned_recipe_rng">DEFAULT</string>
   <string name="save_recipe">Save Recipe</string>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
