Added a shared preferences for the usere last input

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
   <string name="base_url">http://api.yummly.com/v1/</string>
   <string name="returned_recipe_rng">DEFAULT</string>
   <string name="save_recipe">Save Recipe</string>
+
+  <string name="saved_text">Saved Text</string>
 </resources>
